src/components/PokeFetch/PokeFetch.scss
.content {
  display: flex;
  flex-direction: row-reverse;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;

  .fetch {
    display: flex;
    align-items: flex-start;
    flex-wrap: wrap;
    height: 80%;
    width: 50%;
    margin: 10px;
    border-radius: 100%;
    background: rgba(240, 240, 240, 0.404);
    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.363);
  }

  .info {
    display: flex;
    align-self: center;
    width: 40%;
    height: 40%;
    margin: 1rem;
    background: rgba(240, 240, 240, 0.404);
    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.363);
  }

  .buttons {
    display: flex;
    justify-content: space-between;
    width: 100%;

    .left-btn {
      font-size: xx-large;
      color: white;
      font-family: 'Anton', sans-serif;
      text-shadow: 1px 1px 2px black;
      border-radius: 10px;
      height: max-content;
      padding: 0.5rem;
      border: none;
      background: rgba(240, 240, 240, 0.404);

      &:hover {
        cursor: pointer;
        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.301);
        transition: 0.3s ease-out;
      }
    }

    .right-btn {
      font-size: xx-large;
      font-family: 'Anton', sans-serif;
      text-shadow: 1px 1px 2px black;
      color: white;
      border-radius: 10px;
      height: max-content;
      padding: 0.5rem;
      border: none;
      background: rgba(240, 240, 240, 0.404);

      &:hover {
        cursor: pointer;
        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.301);
        transition: 0.3s ease-out;
      }
    }
  }

  .search-container {
    display: flex;
    position: absolute;
    justify-content: center;
    top: 0;
    margin: 20px;
    width: 100%;
    height: 5%;

    .search {
      display: flex;
      position: relative;
      width: 50%;
      align-items: center;
      
      background: rgba(240, 240, 240, 0.804);
      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.363);
      border: none;
      font-size: large;
      font-family: 'Anton', sans-serif;
      color: rgba(0, 0, 0, 0.616);
      text-align: center;
    }

    .search-btn {
      display: flex;
      position: relative;
      text-align: center;
      align-items: center;
      background: blue;
      font-size: larger;
      font-weight: bolder;
      z-index: 10;
      color: white;
      width: max-content;
      padding: 10px;
      border: none;

      &:hover {
        cursor: pointer;
        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.363);
        background: rgba(240, 240, 240, 0.804);
        color: blue;
        transition: 0.3s ease-out;
      }
    }
  }
  .error {
    position: absolute;
    top: 10%;
    width: 50%;
    word-wrap: break-word;
    padding: 8px;
    margin-top: 0px;
    border: 1px solid red;
    border-radius: 5px;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
    background-color: rgba(250, 128, 114, 0.514);
    font-size: medium;

    &:hover {
      cursor: pointer;
      box-shadow: 3px 6px 10px rgba(0, 0, 0, 0.26);
      transition: 0.3s ease-in;
    }
  }
}

@media (max-width: 1060px) {
  .content {
    flex-direction: column;
    overflow: scroll;

    .fetch {
      height: 40%;
    }

    .buttons {
      align-items: center;
    }

    .info {
      margin-top: 8%;
      height: 20%;
      width: 60%
    } 
  }
}

@media(max-width: 870px){
  .content{
    .fetch{
      margin: 10%;
    }

    .info{
      width: 70%;
      height: 25%
    }

    .search-btn{
      padding: 0;
    }
  }


}

@media (max-width: 620px) {
  .content {
    .fetch {
      margin-top: 15%;
    }
    .info {
      margin-top: 15%;
      width: 95%;
      height: max-content;
     
    }
  }
}

@media (max-width: 450px){
  .content{
    overflow-x: hidden;
    .fetch{
      margin-top: 20%;
      width: 80%;  
    }

    .info{
      margin-top: 20%;
      width: 95%;
      height: max-content;
    }
  }
}

